Remove is_frame_hidden from AVDA / SurfaceChooser.

AVDA used to receive a "frame hidden" signal from WMPI.  This would
let it give up the overlay in case some other frame needs it.

Now that DialogOverlayImpl destroys the overlay when the WebContents
is hidden / etc., this isn't needed.  It will be handled normally.

Bug: 782827
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I9b5857f3b37545da2c44462de0424b00de8cb3ae
Reviewed-on: https://chromium-review.googlesource.com/759143
Reviewed-by: Thomas Guilbert <tguilbert@chromium.org>
Reviewed-by: Chris Palmer <palmer@chromium.org>
Commit-Queue: Frank Liberato <liberato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515207}
Former-commit-id: 273128088e5cdee68dfe47a3a1b6173d17cef182