media/gpu/android/android_video_decode_accelerator.cc
@@ -1310,13 +1310,6 @@ void AndroidVideoDecodeAccelerator::SetOverlayInfo(
   if (state_ == BEFORE_OVERLAY_INIT)
     return;
 
-  // Release any overlay immediately when hiding a frame.  Otherwise, it will
-  // stick around as long as the VideoFrame does, which can be a long time.
-  if (overlay_info.is_frame_hidden)
-    picture_buffer_manager_.ImmediatelyForgetOverlay(output_picture_buffers_);
-
-  surface_chooser_state_.is_frame_hidden = overlay_info.is_frame_hidden;
-
   if (overlay_info.is_fullscreen && !surface_chooser_state_.is_fullscreen) {
     // It would be nice if we could just delay until we get a hint from an
     // overlay that's "in fullscreen" in the sense that the CompositorFrame it
